--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.9",
+    "@mui/x-data-grid": "^7.23.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.3.3",
